--- a/css/styles.css
+++ b/css/styles.css
@@ -102,12 +102,12 @@ td p {
 #subscribe {
     background-color: #F5F5F5;
     padding-bottom: 40px;
-    justify-content: end;
+    text-align: center;
     padding-top: 20px;
 }
 
 .ing {
-    margin-top: 10px;
+    margin-top: 18px;
 font-family: cursive;
 }
 
